@@ -7,6 +7,7 @@
 #   com.apple.network.identification.plist  - list of configs seen
 #   preferences.plist - list of what is entered in the config panel
 prefs="/Library/Preferences/SystemConfiguration/com.apple.network.identification.plist"
+tempfile=/tmp/dnssec-trigger-osx.tmp
 
 # active interfaces
 ifs=`ifconfig | awk '/^[^ 	:]*:/ { sub(/:.*$/,empty); iface=$0 } /status: active/ { print iface }'`
@@ -56,6 +57,17 @@ for i in $ifs; do
 done
 # fix whitespace
 ips=`echo $ips`
+
+# see if it has changed
+if test -f $tempfile; then
+	if echo "$ifs $ips" | diff $tempfile - >dev/null; then
+		# it is equal
+		logger "dnssec-trigger(osx) no-change $ifs DNS $ips"
+		exit 0
+	fi
+fi
+# store on file
+echo "$ifs $ips" > $tempfile
 
 logger "dnssec-trigger(osx) detected $ifs DNS $ips"
 0sbindir0/dnssec-trigger-control submit "$ips"
