@@ -11,8 +11,7 @@
 	</array>
 	<key>WatchPaths</key>
 	<array>
-		<string>/Library/Preferences/SystemConfiguration/com.apple.network.identification.plist</string>
-		<string>/Library/Preferences/SystemConfiguration/com.apple.airport.preferences.plist</string>
+		<string>/Library/Preferences/SystemConfiguration</string>
 	</array>
 </dict>
 </plist>
